# Imperial-FYP

./: .gitignore  LICENSE  main.tex  preamble.tex  ref.bib
chapters/: abstract.tex  acknoledgements.tex  background.tex  conclusion.tex  dataset.tex  ethics.tex  evaluation-plan.tex  evaluation.tex  introduction.tex  methodology.tex  related-work.tex  results.tex  title.tex
chapters/interim/: evaluation.tex  plan.tex
slides/: header.tex  main.tex
software_archive/: .gitignore  Makefile  README.md  centerlines.ipynb  preprocessing.ipynb  pyproject.toml  requirements.txt  setup.py
software_archive/crohns/: __init__.py  baseline.py  data_normalisation.py  inference.py  medsam_compare.py  medsam_finetune.py  preprocess.py  utils.py
software_archive/crohns/baseline/: __init__.py  processing_image.py  weak_label_generation.py
software_archive/crohns/medsam_utils/: __init__.py  inference.py  medsam_compare.py  medsam_finetune.py  preprocess.py
software_archive/crohns/nnunet_utils/: convert_dataset.py  train.py
software_archive/crohns/utils/: configuration.py  convert_dataset.py  train.py
software_archive/lab/: EDA.ipynb  MedSAM.ipynb  nnUNet.ipynb  preprocessing.ipynb
software_archive/lab/baseline_weakmask_showcase/: Crohns2023Axial.txt  Crohns2023Coronal.txt
